# rssmonk

./: AGENT.md  AGENTS.md  Brewfile  CONTRIBUTING.md  Dockerfile  README.md  Tiltfile  image.excalidraw  justfile  mise.toml  pyproject.toml  pyrightconfig.json  railpack.json
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/workflows/: build-and-push.yaml
dev/scrapbook/: README.md  make_subscribers.py  make_users.py  run_feed_gen.py  test_rss.py
docs/: FEED_MANAGEMENT.md
kustomize/base/: kustomization.yaml  listmonk-proxy.yaml  listmonk.yaml  rssmonk.yaml  secrets.yaml
kustomize/everest/: kustomization.yaml  postgres.yaml
kustomize/helm-values/: everest-core.yaml
kustomize/overlays/k3d/: kustomization.yaml  mailpit.yaml  postgres.yaml
scripts/: README.md  cleanup-campaigns.py  feed-fetcher.py  feed-manager.py
src/processing/: cron.py  expiry_cleanup.py  notifications_cron.py  periodic_cleanup.py
src/rssmonk/: __init__.py  api.py  cache.py  cli.py  config.py  config_manager.py  core.py  cron.py  email_store.py  feed_fetcher.py  feed_processor.py  health.py  http_clients.py  logging_config.py  models.py  scrap_rssmonk.py  setup_rssmonk.py  shared.py  spoof_login.py  temp_env.py  test_make_users.py  types.py  utils.py
src/rssmonk/routes/: __init__.py  feeds.py  operations.py  subscriptions.py  testing.py
src/scrapbook/: README.md  listmonk_tx_stress.py  make_subscribers.py  make_users.py  run_feed_gen.py  test_make_users.py  test_rss.py
tests/: README.md  __init__.py  conftest.py  listmonk_testbase.py  mock_feed_gen.py  scrapbook.py  test_api.py  test_api_account.py  test_api_feeds.py  test_api_feeds_processing.py  test_api_subscribe.py  test_api_subscription.py  test_api_subscriptions.py  test_api_templates.py  test_api_unsubscribe.py  test_config.py  test_core.py  test_feed_processor.py  test_feeds_mock.py  test_integration.py  test_lifecycle.py  test_mock_feed.py  test_models.py  test_utils.py
