[project]
name = "rssmonk"
version = "0.1.0"
description = "RSS Monk - RSS feed aggregator and email dispatcher"
dependencies = [
    "httpx",
    "feedparser", 
    "typer",
    "rich",
    "tenacity",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
]

requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[project.scripts]
rssmonk = "rssmonk.cli:app"
rssmonk-api = "rssmonk.api:app"
rssmonk-cron = "rssmonk.cron:main"

[tool.uv]
package = true
