[project]
name = "rssmonk"
version = "0.2.0"
description = "RSS Monk - RSS feed aggregator that turns RSS feeds into email newsletters using Listmonk"
authors = [
    {name = "WA Government Department of Transport and Treasury", email = "digital@dtt.wa.gov.au"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["rss", "email", "newsletter", "listmonk", "feeds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment", 
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

dependencies = [
    "httpx>=0.25.0",
    "feedparser>=6.0.0", 
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
rssmonk = "rssmonk.cli:app"
rssmonk-api = "rssmonk.api:app"
rssmonk-cron = "rssmonk.cron:main"

[project.urls]
Homepage = "https://github.com/wagov-dtt/rssmonk"
Repository = "https://github.com/wagov-dtt/rssmonk"
Issues = "https://github.com/wagov-dtt/rssmonk/issues"
Documentation = "https://github.com/wagov-dtt/rssmonk/blob/main/README.md"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0", 
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
