[project]
name = "rssmonk"
version = "0.2.0"
description = "RSS Monk - RSS feed aggregator that turns RSS feeds into email newsletters using Listmonk"
readme = "README.md"
license = {text = "MIT"}
keywords = ["rss", "email", "newsletter", "listmonk", "feeds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment", 
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

dependencies = [
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi[all]>=0.104.0",
    "requests>=2.32.5",
    "prometheus-client>=0.23.1",
]

requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rssmonk = "rssmonk.cli:app"
rssmonk-api = "rssmonk.api:app"
rssmonk-cron = "rssmonk.cron:main"

[project.urls]
Homepage = "https://github.com/wagov-dtt/rssmonk"
Repository = "https://github.com/wagov-dtt/rssmonk"
Issues = "https://github.com/wagov-dtt/rssmonk/issues"
Documentation = "https://github.com/wagov-dtt/rssmonk/blob/main/README.md"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
